Filling some holes in the tested versions
- Added test indices for 6.6.6, 8.11.3, 8.11.4
- All tests still pass, so I guess there were no breaking format changes in these versions?